# cobrars

./: .gitignore  Cargo.toml
cobrars_core/: Cargo.toml
cobrars_core/src/: configuration.rs  lib.rs
cobrars_core/src/core/: gene.rs  metabolite.rs  mod.rs  model.rs  reaction.rs
cobrars_core/src/io/: json.rs  mat.rs  mod.rs
cobrars_core/src/io/gpr_parse/: lexer.rs  mod.rs  parser.rs  token.rs
cobrars_core/src/metabolic_model/: gene.rs  metabolite.rs  mod.rs  model.rs  reaction.rs
cobrars_core/src/model/: gene.rs  metabolite.rs  mod.rs  model.rs  reaction.rs
cobrars_core/src/optimize/: constraint.rs  mod.rs  objective.rs  problem.rs  variable.rs
cobrars_core/src/optimize/solvers/: clarabel.rs  mod.rs  osqp.rs  scip.rs
cobrars_core/src/utils/: hashing.rs  mod.rs
pycobrars/: Cargo.toml  LICENSE  pyproject.toml
pycobrars/rust/: Cargo.toml
pycobrars/rust/src/: lib.rs
pycobrars/src/: lib.rs
pycobrars/src/pycobrars/: __init__.py
pycobrars/src/tests/: test_all.py
rcobrars/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE
rcobrars/R/: extendr-wrappers.R
rcobrars/src/: Makevars.in  Makevars.win.in  entrypoint.c  rcobrars-win.def
rcobrars/src/rust/: Cargo.toml
rcobrars/src/rust/src/: lib.rs
