[package]
name = "cobrars_core"
version = "0.1.0"
edition = "2021"

[features]
scip = ["dep:russcip"]

[dependencies]
clarabel = "0.9.0"
russcip = { version = "0.4.1", optional = true }
serde_json = "1.0.133"
nalgebra = { version = "0.33.2", features = ["sparse"] }
indexmap = "2.6.0"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
