[package]
authors = ["Braden Griebel"]
license = "MIT"
name = "cobrars_core"
version = "0.1.0"
edition = "2021"

[features]
scip = ["dep:russcip"]
osqp = ["dep:osqp"]
highs = ["dep:highs"]
minilp = ["dep:microlp"]

[dependencies]
clarabel = "0.9.0"
russcip = { version = "0.4.1", optional = true }
serde_json = "1.0.133"
nalgebra = { version = "0.33.2", features = ["sparse"] }
indexmap = { version = "2.6.0", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
derive_builder = "0.20.2"
osqp = { version = "0.6.3", optional = true }
cfg-if = "1.0.0"
nalgebra-sparse = "0.10.0"
highs = { version = "1.6.1", optional = true }
microlp = { version = "0.2.6", optional = true }
