[package]
authors = ["Braden Griebel"]
year = "2024"
license = "MIT"
name = "pycobrars"
version = "0.1.0"
edition = "2021"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.2"
cobrars_core = {path = "../cobrars_core"}
