[project]
name = "pycobrars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Braden Griebel", email = "bgriebel@uw.edu" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
pycobrars = "pycobrars:main"

[tool.maturin]
module-name = "pycobrars._core"
python-packages = ["pycobrars"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
