[project]
name = "pycobrars"
version = "0.1.0"
description = "Package for constraint based metabolic modeling"
readme = "README.md"
authors = [{ name = "Braden Griebel", email = "bgriebel@uw.edu" }]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
pycobrars = "pycobrars:main"

[tool.maturin]
module-name = "pycobrars._core"
python-packages = ["pycobrars"]
python-source = "src"
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
